tests/dataset/tpc-ds/compiler/c/q84.error
/tmp/TestCCompiler_TPCDS_Goldenq844219305344/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq844219305344/001/prog.c:264:15: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  264 |       customer.len * customer_address.len * customer_demographics.len *
      |               ^
      |               ->
/tmp/TestCCompiler_TPCDS_Goldenq844219305344/001/prog.c:264:38: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  264 |       customer.len * customer_address.len * customer_demographics.len *
      |                                      ^
      |                                      ->
/tmp/TestCCompiler_TPCDS_Goldenq844219305344/001/prog.c:264:66: error: ‘(customer_demographic_t *)&customer_demographics’ is a pointer; did you mean to use ‘->’?
  264 |       customer.len * customer_address.len * customer_demographics.len *
      |                                                                  ^
      |                                                                  ->
/tmp/TestCCompiler_TPCDS_Goldenq844219305344/001/prog.c:265:20: error: ‘(store_return_t *)&store_returns’ is a pointer; did you mean to use ‘->’?
  265 |       store_returns.len * household_demographics.len * income_band.len);
      |                    ^
      |                    ->
/tmp/TestCCompiler_TPCDS_Goldenq844219305344/001/prog.c:265:49: error: ‘(household_demographic_t *)&household_demographics’ is a pointer; did you mean to use ‘->’?
  265 |       store_returns.len * household_demographics.len * income_band.len);
      |                                                 ^
      |                                                 ->
/tmp/TestCCompiler_TPCDS_Goldenq844219305344/001/prog.c:265:67: error: ‘(income_band_t *)&income_band’ is a pointer; did you mean to use ‘->’?
  265 |       store_returns.len * household_demographics.len * income_band.len);
      |                                                                   ^
      |                                                                   ->
